Repository pattern added + Products shown on the Shop page

--- a/BelgianTreat/Views/_ViewImports.cshtml
+++ b/BelgianTreat/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BelgianTreat.Controllers
 @using BelgianTreat.ViewModels
+@using BelgianTreat.Data.Entities
+
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
